<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corner">

    <RelativeLayout
        android:id="@+id/phoneNumberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="21dp">

        <TextView
            android:id="@+id/phoneNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_text"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneNumberText"
            android:layout_marginTop="7dp"
            android:text="@string/phone_number" />


        <TextView
            android:id="@+id/change_ph_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="7dp"
            android:text="@string/change"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>


    <TextView
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_below="@id/phoneNumberLayout"
        android:gravity="center_vertical"
        android:paddingStart="21dp"
        android:text="@string/language"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_below="@id/language"
        android:gravity="center_vertical"
        android:paddingStart="21dp"
        android:text="@string/help"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/privacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_below="@id/help"
        android:gravity="center_vertical"
        android:paddingStart="21dp"
        android:text="@string/privacy"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_below="@id/privacyPolicy"
        android:gravity="center_vertical"
        android:paddingStart="21dp"
        android:text="@string/about"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_below="@id/about"
        android:gravity="center_vertical"
        android:paddingStart="21dp"
        android:text="@string/share"
        android:textSize="17sp" />
</RelativeLayout>