<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/balance_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="21dp"
    android:background="@drawable/round_corner">


    <TextView
        android:id="@+id/balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/wallet"
        android:drawableEnd="@drawable/ic_add"
        android:drawablePadding="20dp"
        android:padding="7dp"
        android:text="@string/balance"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/balance"
        android:drawableStart="@drawable/wallet"
        android:drawablePadding="20dp"
        android:padding="7dp"
        android:text="@string/points"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/coupons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/points"
        android:drawableStart="@drawable/wallet"
        android:drawableEnd="@drawable/arrow_left"
        android:drawablePadding="20dp"
        android:padding="7dp"
        android:text="@string/coupons"
        android:textSize="17sp"
        android:textStyle="bold" />

</RelativeLayout>